--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Outfit:wght@100..900&display=swap');
 
 /* CSS variables */
 :root {
-    --primary-font: "Quicksand", sans-serif;
-    /* --secondary-font: "Macondo", cursive; */
+    --primary-font: "Outfit", sans-serif;
+    --secondary-font: "Quicksand", sans-serif;
     /* --primary-color: #3a2620; */
     /* color */
     /* --secondary-color: #aa9581; */
@@ -16,5 +16,9 @@
 
 /* Global styles */
 body {
+    font-family: var(--secondary-font);
+}
+
+h1, h2 {
     font-family: var(--primary-font);
 }
