basic hero layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,24 @@ body {
 h1, h2 {
     font-family: var(--primary-font);
 }
+
+/* Hero */
+#hero {
+    height: 100%;
+    width: 100%;
+    /* image url, don't repeat, center horizontally and vertically, and automatically size/crop itself to fit the whole hero section */
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    /* Last rgba value here sets the opacity, so it is translucent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
