--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,16 @@ h1, h2 {
     position: relative;
 }
 
+/* Intro */
+#intro {
+    padding: 0px;
+}
+
+#intro img {
+    max-width: 100%;
+    height: auto;
+}
+
 /* #cover-text { */
     /* Last rgba value here sets the opacity, so it is translucent */
     /* background-color: rgba(241, 109, 107, .7);
