--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,10 @@ h2 {
     color: var(--black-color);
 }
 
+#navbar a {
+    color: var(--black-color);
+}
+
 /* Hero */
 #hero {
     /* fill device window, need fixed navbar height to get accurate number */
@@ -128,11 +132,26 @@ h2 {
     border: none;
 }
 
+#links h5 {
+    color: var(--highlight-color);
+    font-size: 1.5rem;
+    /* text-align: center; */
+}
+
+#links p {
+    color: var(--black-color);
+    /* text-align: center; */
+}
+
+/* Link buttons */
 .custom-button-outline {
     font-weight: bold;
     background-color: white;
     border: 3px solid var(--highlight-color);
     color: var(--highlight-color);
+    /* display: block;
+    margin-left: auto;
+    margin-right: auto; */
 }
 
 .custom-button-outline:hover {
@@ -160,7 +179,7 @@ h2 {
 /* Footer - AI generated */
 footer {
     background-color: var(--primary-color);
-    color: var(--secondary-color);
+    color: var(--black-color);
     padding-bottom: 3rem;
     text-align: center;
     bottom: 0;
