--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ h2 {
 /* Intro */
 #intro {
     margin: 0px;
+    margin-top: 1rem;
 }
 
 /* Tips */
@@ -184,4 +185,6 @@ footer {
     text-align: center;
     bottom: 0;
     width: 100%;
+    /* shift text down a bit */
+    padding-top: 1rem;
 }
