--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,12 +64,14 @@ h3, h4, h5 {
 /* Hero */
 #hero {
     /* fill device window, excluding navbar */
-    height: 94vh;
+    height: 100vh;
     width: 100vw;
-    margin-top: 6vh;
     /* image url, don't repeat, center horizontally and vertically, and automatically size/crop itself to fit the whole hero section */
-    background: url("../images/hero-image.webp") no-repeat center center/cover;
+    background-image: url("../images/hero-image.webp");
+    background-repeat: no-repeat;
+    background-position: 48% 0%;
     background-attachment: fixed;
+    background-size: cover;
     position: relative;
 }
 
@@ -145,6 +147,14 @@ h3, h4, h5 {
 #links h5 {
     font-size: 1.5rem;
     color: var(--highlight-color);
+}
+
+#links img {
+    max-width: 80%;
+    /* center image and content */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Link buttons */
