--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,12 @@ h3, h4, h5 {
     border-radius: 15px;
 }
 
+html {
+    /* on click from burger menu, ensures text isn't obscured */
+    scroll-padding-top: 310px;
+    /* scroll-padding-top: 55px; */
+}
+
 /* Navbar */
 #navbar {
     background-color: var(--primary-color);
@@ -63,6 +69,10 @@ h3, h4, h5 {
 
 #navbar a {
     color: var(--black-color);
+}
+
+#navbar a:hover {
+    color: var(--highlight-color);
 }
 
 /* Hero */
@@ -162,11 +172,9 @@ h3, h4, h5 {
 }
 
 #links img {
-    max-width: 80%;
-    /* center image and content */
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 240px;
+    object-fit: contain;
+    margin-left: 20px;
 }
 
 /* Link buttons */
