--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,10 @@ html {
     color: var(--highlight-color);
 }
 
+#navbar .active {
+    font-style: underline;
+}
+
 /* Hero */
 #hero {
     /* fill device window */
