alternate stack overflow code for scrolling to reduce jittering and rubber-banding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,9 @@ h3, h4, h5{
 html {
     /* ensures navbar doesn't obscure section headings */
     scroll-padding-top: 65px;
+
+    /* removes scroll jittering */
+    scroll-behavior: auto;
 }
 
 main {
